--- a/pom.xml
+++ b/pom.xml
@@ -40,21 +40,32 @@
     ====================================================================== -->
     <dependencyManagement>
         <dependencies>
-        
+
             <dependency>
                 <groupId>org.wiedza.monitoring</groupId>
                 <artifactId>monitoring-api</artifactId>
                 <version>${project.version}</version>
             </dependency>
-            
+
             <dependency>
                 <groupId>org.wiedza.monitoring</groupId>
                 <artifactId>monitoring-request-infos</artifactId>
                 <version>${project.version}</version>
             </dependency>
-            
+
         </dependencies>
     </dependencyManagement>
 
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.sonarsource.scanner.maven</groupId>
+                    <artifactId>sonar-maven-plugin</artifactId>
+                    <version>3.4.0.905</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 
 </project>
